--- a/Mini Project 2 Anime/MP2/src/index.css
+++ b/Mini Project 2 Anime/MP2/src/index.css
@@ -48,7 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #f7f7f7;
 }
 button:focus,
 button:focus-visible {
@@ -57,11 +57,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #d4d4d4;
+    background-color: #0f0f0f;
   }
   a:hover {
-    color: #747bff;
+    color: #df7a08;
   }
   button {
     background-color: #f9f9f9;
